src/stylesheets/components/project/_recent-projects.scss
//
// Recent projects
// --------------------------------------------------

.recent-projects-view {
  flex: 1 1 50%;
  display: flex;
  flex-direction: column;
  background-color: $recent-projects-bg;
  color: $recent-projects-color;
  min-width: 0;

  .toolbar {
    .is-blurred & {
      @if $platform == darwin {
        background-color: $toolbar-blurred-bg-darwin;
      }
    }
  }

  .search {
    width: auto;
    margin-top: 15px;
    margin-bottom: $space-md - 10px;

    .icon-search {
      left: 40px;
      color: $input-color-placeholder;
    }

    .form-control {
      border-color: transparent;
      background-color: transparent;
      padding-left: 60px;
      font-size: 18px;

      &:focus {
        border-color: transparent !important;
        box-shadow: none !important;
      }
    }
  }

  nav {
    flex: 1 1 0;
    min-height: 0;
    display: flex;
    flex-direction: column;
  }

  .project-files {
    padding: 0 (40px - $space-sm) 1px;
    overflow-y: auto;
  }

  .project-file {
    display: flex;
    align-items: center;
    gap: $default-padding-horizontal;
    padding: ($space-sm + 1px) $space-sm $space-sm;
    border-radius: 5px;
    position: relative;
    cursor: pointer;

    &:hover {
      background-color: $recent-project-hover-bg;
      padding-bottom: ($space-sm + 1px);
      margin-bottom: -1px;
      z-index: 1;

      &::before {
        content: none;
      }
    }

    &::before {
      content: "";
      position: absolute;
      top: 0;
      right: $space-sm;
      left: $space-sm;
      height: 1px;
      background-color: $recent-project-border;

      @include variant(".project-file:first-child") {
        content: none;
      }
    }

    .icon-maze {
      flex: 0 0 auto;

      svg {
        width: $space-xl;
        height: $space-xl;
        color: $maze-color;
        margin-bottom: -2px;
        margin-left: -2px;

        @include state(".project-file:hover") {
          color: $maze-hover-color;
        }
      }
    }

    .name {
      font-size: $font-size-large;
      margin-top: -10px;

      .btn-icon {
        flex: 0 0 auto;
        padding: 0;
        margin-left: $space-min;
        cursor: pointer;
      }
    }

    .truncate {
      display: inline-block;
      vertical-align: top;
      max-width: calc(100% - #{$space-md});
    }

    .stats {
      white-space: nowrap;
      font-size: $font-size-small;
      color: $recent-project-stats-color;
      margin-bottom: -10px;
      @include css-truncation;

      @media (min-resolution: 2dppx) {
        margin-bottom: -10.5px;
      }

      li {
        display: inline;
        margin-left: $space-xs;
      }

      :first-child {
        color: $recent-projects-color;
        margin-left: 0;
      }
    }

    > .btn-icon {
      display: none;
      margin-right: 3px;
      cursor: pointer;

      @include state(".project-file:hover") {
        display: inline-flex;
      }
    }
  }
}

